kubernetes/deployments.yaml
# The application itself.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  # Start 1 copy of the application.
  replicas: 1

  # Select the pods which are part of this deployment.
  selector:
    matchLabels:
      app: libraries

  # The pod template this deployment will create.
  template:
    metadata:
      labels:
        app: libraries
    spec:
      imagePullSecrets:
        - name: gcr-json-key

      containers:
        - name: app
          image: libraries:latest
          imagePullPolicy: Always
          # Env variables form ConfigMap
          ports:
            - containerPort: 8000
          # Limit memory use to prevent uncontrolled resource use in case of bugs.
          # This can be raised if necessary, but make sure the cluster is large
          # enough or the application won't deploy.
          resources:
            limits:
              memory: 1024Mi
            requests:
              memory: 512Mi
