kubernetes/services.yaml
# A service to allow external connections.  This accepts connections from inside
# the cluster and distributes them to our pod(s).
apiVersion: v1
kind: Service
metadata:
  name: libraries-http
  labels:
    app: libraries
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: libraries
