kubernetes/production.yaml
---
# create the namespace for libraries

kind: Namespace
apiVersion: v1
metadata:
  name: ${KUBERNETES_NAMESPACE_OVERWRITE}
  labels:
    name: libraries

---
# The application itself.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
spec:
  # Start 1 copy of the application.
  replicas: 2

  # Select the pods which are part of this deployment.
  selector:
    matchLabels:
      app: libraries

  # The pod template this deployment will create.
  template:
    metadata:
      labels:
        app: libraries
    spec:
      imagePullSecrets:
        - name: gcr-json-key

      containers:
        - name: app
          image: ${IMAGE}
          imagePullPolicy: Always
          # Env variables form ConfigMap
          ports:
            - containerPort: 8000
          # Limit memory use to prevent uncontrolled resource use in case of bugs.
          # This can be raised if necessary, but make sure the cluster is large
          # enough or the application won't deploy.
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi

---
# Cloud SQL proxy
# We need this to access our Cloud SQL instance(s)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsqlproxy
  namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
spec:
  replicas: 1

  # Select the pods which are part of this deployment.
  selector:
    matchLabels:
      tool: cloudsqlproxy

  # The pod template this deployment will create.
  template:
    metadata:
      labels:
        tool: cloudsqlproxy
    spec:
      containers:
        - name: cloudsqlproxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.38.2
          command:
            [
              "/cloud_sql_proxy",
              "--dir=/cloudsql",
              "-instances=cca-web-0:us-west1:psql14-instance=tcp:0.0.0.0:5432",
              "-credential_file=/secrets/cloudsql/credentials.json",
            ]
          ports:
            - name: postgresql
              containerPort: 5432
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: cloudsql
          emptyDir: {}

---
# A service to allow external connections.  This accepts connections from inside
# the cluster and distributes them to our pod(s).
apiVersion: v1
kind: Service
metadata:
  name: libraries-http
  namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
  labels:
    app: libraries
spec:
  type: NodePort
  ports:
    - port: 8000
      protocol: TCP
  selector:
    app: libraries

---
# A service that allows pods to connect to the Cloud SQL instance
# via cloudsqlproxy pod(s)
apiVersion: v1
kind: Service
metadata:
  name: cloudsqlproxy
  namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
spec:
  ports:
    - port: 5432
      targetPort: postgresql
  selector:
    tool: cloudsqlproxy

---
## Ingress to configure external connections.  On GKE, this will create a GCP
## HTTP load balancer.  These are charged *per ingress* so be careful when
## creating new ones.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
spec:
  defaultBackend:
    service:
      name: libraries-http
      port:
        number: 8000
